2001-07-24  Tristan Tarrant <nadir@users.sourceforge.net>
	* usecode/useval.h: add a cast to get_elem() to make it compile

2001-07-24  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/useval.cc (Usecode_value): Operator== compares array
	elems.
	* usecode/intrinsics.cc:  Intrinsic get_body_npc() added.

2001-07-22  Jeff Freedman  <jeff@amy.nerble.net>

	* Shape_chooser:  Added 'Search' widgets.
	* actors.cc: Call usecode for sleep arrow hit.
	* intrinsics.cc: click_on_item special case for weapon.

2001-07-21 Ryan Nunn <triforce@merlin.net.au>
	* Makefile.cygwin, Makefile.win32: Create Flexes and Flex headers first

2001-07-21  Jeff Freedman  <jeff@amy.nerble.net>

	* intrinsics.cc:  Guessing at SI intrinsics 0x74, 0x75 for fixing
	Silver Seed exit bug.

2001-07-20  Tristan Tarrant <nadir@users.sourceforge.net>
	* exultmenu.cc: use the expack-generated EXULT_FLX_* constants

2001-07-20  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* objs.cc: allowing destroying of debris (Silver Seed)

2001-07-20  Jeff Freedman  <jeff@amy.nerble.net>

	* gamerend.cc: Show grid when map-editing.
	* ExultStudio:  Added 'lift' setting to make it possible to
	position objects off the ground.

2001-07-19  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* configure.in: Solaris: -lX11 instead of -lX

2001-07-19  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucinternal.cc (Usecode_internal): Clean up stack in CMPS.

	* Ucinternal.{cc,h}:  Separated out most of Usecode_machine here
	to cut down on included code (ucmachine.h is much smaller now).

2001-07-18  Dominik Reichardt <gigdr@tesionmail.de>
	* docs/faq/: updated FAQ
	* docs/IslandAddOn.txt added with all the ideas so far for a BG Add-On
	* Faq: updated
	* audi/conv.h : changed to play correct sfx in SI (hopefully)

2001-07-18  Jeff Freedman  <jeff@amy.nerble.net>

	* Testing with EFence:  Fixed a couple memory bugs, including one
	during the voyage of Hawk's ship.
	* ExultStudio:  Added 'Read map', 'Reload usecode' commands.
